# University_Proyects

./: .gitignore  README.md
Algoritmos Geometricos/AG2223-pr1a/: .gitignore  vcpkg_libraries.bat
Algoritmos Geometricos/AG2223-pr1a/clion/Geometry/: RayLine.h  RenderSettings.cpp  RenderSettings.h
Algoritmos Geometricos/AG2223-pr1a/clion/Rendering/: DrawPointCloud.h  DrawPolygon.cpp  DrawSegment.h  ShaderProgramDB.h  Window.h
Algoritmos Geometricos/AG2223-pr1a/clion_linux/: FindGLEW.cmake  FindGLFW3.cmake
Algoritmos Geometricos/AG2223-pr1a/clion_linux/Geometry/: SegmentLine.h  Vect2d.h
Algoritmos Geometricos/AG2223-pr1a/clion_linux/Rendering/: DrawRay.h  InputManager.cpp
Algoritmos Geometricos/AG2223-pr1a/vs/Source/Geometry/: Line.cpp  Line.h  Point.h  PointCloud.cpp  PointCloud.h
Algoritmos Geometricos/AG2223-pr1a/vs/Source/Rendering/: DrawPointCloud.cpp  DrawPolygon.h
Algoritmos Geometricos/AG2223-pr2/clion/Geometry/: RandomUtilities.h  RayLine.cpp  main.cpp
Algoritmos Geometricos/AG2223-pr2/clion/Rendering/: CameraGuiAdapter.h  DrawMesh.cpp  DrawTriangle.h
Algoritmos Geometricos/AG2223-pr2/clion_linux/Geometry/: Circle.h  Line.h  Point.cpp  Polygon.h  Triangle.cpp
Algoritmos Geometricos/AG2223-pr2/clion_linux/PrecompiledHeaders/: InclGeom2D.h
Algoritmos Geometricos/AG2223-pr2/clion_linux/Rendering/: DrawMesh.h  InterfaceAdapter.h  Texture.h
Algoritmos Geometricos/AG2223-pr2/vs/Source/: AG2223.vcxproj  AG2223.vcxproj.filters
Algoritmos Geometricos/AG2223-pr2/vs/Source/Geometry/: AABB.cpp  AABB.h  Edge3d.cpp  InclDraw3D.h  Line3d.cpp  Line3d.h  Plane.h  Point.cpp  PointCloud3d.cpp  Ray3d.h  TriangleModel.cpp  TriangleModel.h  Vect2d.h  Vect3d.cpp  Vect3d.h
Algoritmos Geometricos/AG2223-pr2/vs/Source/PrecompiledHeaders/: InclGeom2D.h
Algoritmos Geometricos/AG2223-pr2/vs/Source/Rendering/: DrawAABB.cpp  DrawCircle.h  DrawLine.cpp  DrawPlane.h  DrawPointCloud.cpp
Algoritmos-Geometricos/AG2223-pr1a/clion/Geometry/: PointCloud.h  SegmentLine.cpp
Algoritmos-Geometricos/AG2223-pr1a/clion/Rendering/: Camera.cpp  Camera.h  DrawLine.cpp  DrawLine.h  DrawPointCloud.cpp  DrawRay.cpp  Model3D.h  SceneContent.cpp
Algoritmos-Geometricos/AG2223-pr1a/clion_linux/: install_libraries.sh
Algoritmos-Geometricos/AG2223-pr1a/clion_linux/Geometry/: ChronoUtilities.h
Algoritmos-Geometricos/AG2223-pr1a/clion_linux/Rendering/: DrawPoint.h  DrawPolygon.cpp  DrawTriangle.cpp  FBOScreenshot.h  GUI.cpp  SceneContent.cpp
Algoritmos-Geometricos/AG2223-pr1a/vs/Source/: AG2223.vcxproj  AG2223.vcxproj.filters  Constantes.h
Algoritmos-Geometricos/AG2223-pr1a/vs/Source/Geometry/: BasicGeometry.h  RayLine.cpp  SegmentLine.cpp
Algoritmos-Geometricos/AG2223-pr1a/vs/Source/Rendering/: DrawRay.cpp  FBO.h  Renderer.cpp  SceneContent.cpp  VAO.h
Algoritmos-Geometricos/AG2223-pr2/: .gitignore  vcpkg_install.bat
Algoritmos-Geometricos/AG2223-pr2/clion/Geometry/: Triangle.h  Vertex.cpp
Algoritmos-Geometricos/AG2223-pr2/clion/PrecompiledHeaders/: InclDraw2D.h
Algoritmos-Geometricos/AG2223-pr2/clion/Rendering/: DrawCircle.cpp  DrawPoint.cpp  Image.h  SceneContent.h
Algoritmos-Geometricos/AG2223-pr2/clion_linux/: CMakeLists.txt
Algoritmos-Geometricos/AG2223-pr2/clion_linux/Geometry/: Line.cpp  Scene.cpp  Scene.h  Vertex.h
Algoritmos-Geometricos/AG2223-pr2/clion_linux/Rendering/: GUI.h  GuiUtilities.h  Model3D.cpp  Renderer.h
Algoritmos-Geometricos/AG2223-pr2/vs/Source/Geometry/: AABB.h  BasicGeometry.h  Circle.cpp  Edge3d.h  InclGeom3D.h  Line3d.cpp  Plane.cpp  Plane.h  PointCloud3d.h  Ray3d.cpp  RayLine.h  Segment3d.cpp  Triangle3d.cpp  Triangle3d.h  TriangleModel.h  Vect2d.cpp  Vect3d.cpp  Vect3d.h
Algoritmos-Geometricos/AG2223-pr2/vs/Source/Rendering/: ApplicationState.h  DrawAABB.cpp  DrawAABB.h  DrawLine3d.cpp  DrawMesh.cpp  DrawPlane.cpp  DrawPoint.cpp  DrawPoint.h  DrawPointCloud.h  DrawRay3D.h  DrawSegment.h  Model3D.h  SceneContent.cpp  ShaderProgram.h  Window.cpp
Algoritmos-Geometricos/AG2223-pr3/: .gitignore
Algoritmos-Geometricos/AG2223-pr3/clion/: CMakeLists.txt
Algoritmos-Geometricos/AG2223-pr3/clion/Geometry/: PointCloud.cpp  Polygon.cpp  Vect2d.cpp
Algoritmos-Geometricos/AG2223-pr3/clion/PrecompiledHeaders/: stdafx.h
Algoritmos-Geometricos/AG2223-pr3/clion/Rendering/: CameraProjection.h  RenderingShader.h  TextureList.h
Algoritmos-Geometricos/AG2223-pr3/clion_linux/Rendering/: DrawSegment.cpp  InputManager.h
Algoritmos-Geometricos/AG2223-pr3/vs/: AG2223.sln
Algoritmos-Geometricos/AG2223-pr3/vs/Source/: AG2223.vcxproj  AG2223.vcxproj.filters  Constantes.h  pointCloud.txt
Algoritmos-Geometricos/AG2223-pr3/vs/Source/Geometry/: AABB.cpp  BasicGeometry.h  Bezier.cpp  Bezier.h  InclDraw3D.h  Line3d.cpp  Line3d.h  Plane.cpp  Plane.h  PointCloud3d.cpp  Polygon.cpp  Segment3d.h  SegmentLine.h  Triangle3d.cpp  Triangle3d.h  TriangleModel.cpp  TriangleModel.h  Vect3d.h  Vertex.cpp
Algoritmos-Geometricos/AG2223-pr3/vs/Source/Patterns/: Singleton.h
Algoritmos-Geometricos/AG2223-pr3/vs/Source/PrecompiledHeaders/: InclDraw2D.h
Algoritmos-Geometricos/AG2223-pr3/vs/Source/Rendering/: DrawBezier.cpp  DrawBezier.h  DrawLine3d.h  DrawMesh.cpp  DrawMesh.h  DrawRay3D.cpp  DrawSegment.cpp  DrawTriangle.cpp  DrawTriangle.h  GUI.cpp  Model3D.cpp  SceneContent.cpp
Animacion 3D - P1/: UpgradeLog.htm
Animacion 3D - P1/Assets/: Move_Points.cs  Render_Bezier.cs
Animacion 3D - P1/Assets/Scenes/: SampleScene.unity
Animacion 3D - P1/UserSettings/Layouts/: default-2022.dwlt
Animacion-3D/Pr1/Assets/: Loot_At.cs  Move_Points.cs  Render_Bezier.cs
Animacion-3D/Pr1/Assets/Scenes/: SampleScene.unity
Animacion-3D/Pr1/ProjectSettings/: ProjectSettings.asset
Animacion-3D/Pr2/Assets/: Dividir_Camaras.cs  Render_Bezier.cs
Animacion-3D/Pr2/Assets/Scenes/: SampleScene.unity
